
syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/cpustejovsky/event-store/protos/hitpoints";

package hitpoints;

// PlayerCharacterHitPoints records changes hit points
// for the player character with CharacterName
// along with a Note as to the reason
message PlayerCharacterHitPoints {
  string Id = 1;
  string CharacterName = 2;
  int32 CharacterHitPoints = 3;
  string Note = 4;
}

service HitPointsRecorder {
  rpc RecordHitPoints(PlayerCharacterHitPoints) returns (google.protobuf.Empty) {}
}